# CFAL-bench

./: .gitignore  .gitmodules  README.md  benchmark_futhark.sh  benchmarking.md  futhark-time2flops.py  futhark.mk  gitignore  lines.sh
CG/: README.md
FFT/: .gitignore  Makefile  README.md  fft.f90
Fin-LocVolCalib/: README.md
Fin-LocVolCalib/APL/: finpar.apln
Fin-LocVolCalib/baseline-FinPar/: README.md  setup.mk
Fin-LocVolCalib/dace/: VolCalib-dace.py  VolCalib-naive.py  constants.py  utils.py
Fin-LocVolCalib/sac/: Makefile
FlashAttention/: README.md
FlashAttention/APL/: flash_attention.apln  flash_attention_k.apln  flash_attention_v4.dws  flashattention.apln
FlashAttention/accelerate/: cabal.project  flashattention.cabal  out  out.txt  out2.txt  output  stack.yaml
FlashAttention/accelerate/src/: Flash_alg1.hs  Flash_custom.hs  Input.hs  Main.hs  Naive.hs
FlashAttention/baseline-cpu/: Makefile  bench_flash_attention_cpu.sh  flash_attention_cpu.c  job.sh
FlashAttention/baseline-gpu/: flash_attention_gpu.cu  job.sh  run_flash_attention_gpu.sh  run_s2mm_cuda.sh  test_flash_attention_gpu.sh  test_s2mm_cuda.sh
FlashAttention/c/: Makefile  README.md  test.sh
FlashAttention/dace/: bench_flash_attention_dace_cpu.py  bench_flash_attention_dace_gpu.py  experiment.py  flash_attention_dace.py  flash_attention_dace_cpu.py  flash_attention_dace_gpu.py  flash_attention_naive.py  test_flash_attention_dace.sh  vanilla_attention.py
FlashAttention/futhark/: Makefile  custom-alg1-opt.fut  custom-alg1-opt.fut.tuning  custom-alg1.fut  custom-alg1.fut.tuning  flash-alg1.fut  flash_alg1.fut  flash_alg1_hack.fut  flash_alg1_hack.fut.tuning  flash_alg1_nice.fut  job.sh  naive.fut  naive.fut.tuning
FlashAttention/sac/: Makefile  bench_mt.sh  bench_seq.sh
LULESH/: README.md
LocVolCalib/: README.md
LocVolCalib/C/: volcalib.c
LocVolCalib/accelerate/: debug  locvolcalib.cabal  stack.yaml
LocVolCalib/accelerate/src/: LocVolCalib.hs  Main.hs
LocVolCalib/baseline-FinPar/: README.md  platform.mk
LocVolCalib/dace/: LocVolCalib.py  LocVolCalib_2.py  VolCalib-dace.py  constants.py  locvolcalib_dace.py
LocVolCalib/error_analysis/: Makefile  tridiagonal  tridiagonal.f90
LocVolCalib/futhark/: LocVolCalib.fut  Makefile
LocVolCalib/sac/: Makefile
MG/: .gitignore  MG.sac  Makefile  README.md  bench_omp.sh  bench_seq.sh  make.def
MG/APL/: MG.apln  MG_k.apln  MG_v4.dws  README.md  RUN.bat  RUN.sh
MG/accelerate/: hie.yaml  mg.cabal  out.txt  stack.yaml
MG/accelerate/src/: Main.hs
MG/baseline-NPB-GPU/: bench.sh  job.sh
MG/baseline-cpu/: README  README.install  job.sh
MG/dace/: bench_cpu.sh  bench_gpu.sh  mg.py  mg_dace.py
MG/futhark/: Makefile  README.md  job.sh  mg-in-work.fut  mg-nas-kers.fut  mg-nice-but-slow.fut  mg.fut  util.fut
MG/other-resources/: useful-links.txt
MG/sac/: Makefile  bench_cuda.sh  bench_mt.sh  bench_seq.sh
STREAM/: .gitignore  Makefile  stream.c  stream.f  stream.sh
clickbench/: README.txt
delta-stepping/: README.md
kd-tree/: README.md
kd-tree/haskell/: Makefile  haskell.cabal
kd-tree/haskell/app/: Main.hs
lud/: Makefile  README.md  goldenSeq.h  kernels.cu.h  main.cu
nbody-barnes-hut/: README.md
nbody-naive/: Makefile  README.md  nbody.c
nbody-naive/APL/: RUN.bat  RUN.sh  codfns_v4.dws  codfns_v5.dws  nbody_naive.apln  nbody_naive_v4.apln
nbody-naive/C/: .gitignore  Makefile  bench_block.sh  bench_block_omp.sh  bench_omp.sh  bench_seq.sh  block.c  block_omp.c  graph_stddev.sh  nbody.f90  nbody_bench.c  nbody_omp.c
nbody-naive/CPU_baselines/: Makefile  README.md  run_cuda.sh
nbody-naive/accelerate/nbody-naive/: cabal.project  const.txt  hie.yaml  nbody-naive.cabal  stack.yaml  test.txt
nbody-naive/accelerate/nbody-naive/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
nbody-naive/accelerate/nbody-naive/dist-newstyle/src/: accelerate-126dff0db0593f2b.cache
nbody-naive/accelerate/nbody-naive/src/: Input.hs  Main.hs  NBody.hs  Physics.hs
nbody-naive/baseline-cpu/: Makefile  graph_stddev.sh  job.sh  nbody.c
nbody-naive/baseline-gpu/: Makefile  graph_stddev.sh  job.sh  nbody.cu  util.cu.h
nbody-naive/dace/: README.md  nbody_dace.py  nbody_dace_cpu.py  nbody_dace_cpu_impl.py  nbody_dace_gpu.py  nbody_dace_gpu_impl.py  nbody_naive.py
nbody-naive/futhark/: .gitignore  Makefile  README.md  futhark.pkg  job.sh  nbody.fut  physics.fut
nbody-naive/results/: nbody_mt_100000_10.csv  nbody_mt_100000_10.raw  nbody_mt_100000_10_mem.csv  nbody_mt_100000_10_mem.raw  (+8 more)
quickhull/: .gitignore  Makefile  README.md  gen_points.c  points2sac.c  readme.md
quickhull/accelerate/: hie.yaml  quickhull.cabal  stack.yaml
quickhull/accelerate/src/: Main.hs  Quickhull.hs
selected_inversion/: README.md  block_tridiag.py
stencils/: README.md  cavity_flow.py  channel_flow.py  hdiff.py  vadv.py
tools/: Makefile
util/: README.md  bench_accelerate.sh  bench_dace.sh  bench_futhark.sh  bench_omp.sh  bench_sac_cuda.sh  bench_sac_mt.sh  benchmark_futhark.sh  futhark-csv.py  futhark-json2mem.py  futhark-json2runtimes.py  futhark-time2flops.py  futhark.mk  nbody-runtimes2gflops.py  runtimes-stddev.py  runtimes2gflops.py  statistics.py  table-nbody.py  table-quickhull.py
veros-tke/: README.md
(+387 files in other folders)
