cabal-version:      2.4
name:               locvolcalib
version:            0.1.0.0

author:             Ivo Gabe de Wolff
maintainer:         i.g.dewolff@uu.nl


executable locvolcalib
  main-is:          Main.hs

  other-modules:    LocVolCalib

  build-depends:    base >= 4.10,
                    accelerate >= 1.3.0.0,
                    lens-accelerate,
                    -- accelerate-llvm,
                    -- accelerate-llvm-native,
                    -- accelerate-llvm-ptx,
                    -- llvm-hs,
                    -- cuda,
                    -- nvvm,
                    criterion
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -threaded -Wall
