cabal-version:      2.4
name:               nbody-naive
version:            0.1.0.0

author:             David
maintainer:         d.p.vanbalen@uu.nl


executable nbody-naive
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      NBody
      Physics

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ==4.17.1.0,
                      accelerate
    hs-source-dirs:   src
    default-language: Haskell2010
