cabal-version:      2.4
name:               nbody-naive
version:            0.1.0.0

author:             David
maintainer:         d.p.vanbalen@uu.nl


executable nbody-naive
  main-is:          Main.hs

  other-modules:
    NBody
    Physics
    Input

  build-depends:    base >= 4.10,
                    accelerate >= 1.3.0.0,
                    accelerate-llvm,
                    accelerate-llvm-native,
                    -- accelerate-llvm-ptx,
                    llvm-hs,
                    -- cuda,
                    -- nvvm,
                    criterion
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options: -threaded
